--- a/Evaluation Manager.csproj
+++ b/Evaluation Manager.csproj
@@ -56,6 +56,12 @@
     <Compile Include="FrmEvaulation,.Designer.cs">
       <DependentUpon>FrmEvaulation,.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmFinalReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmFinalReport.Designer.cs">
+      <DependentUpon>FrmFinalReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     <Compile Include="Repositories\TeacherRepository.cs" />
     <EmbeddedResource Include="FrmEvaulation,.resx">
       <DependentUpon>FrmEvaulation,.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmFinalReport.resx">
+      <DependentUpon>FrmFinalReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
